# clhorde

./: CLAUDE.md  Cargo.toml  Makefile  README.md  keymap_example.toml
.github/workflows/: ci.yml
crates/clhorde-cli/: Cargo.toml
crates/clhorde-cli/src/: daemon_client.rs  main.rs
crates/clhorde-cli/src/commands/: attach.rs  config.rs  keys.rs  mod.rs  qp.rs  status.rs  store.rs  submit.rs
crates/clhorde-core/: Cargo.toml
crates/clhorde-core/src/: config.rs  ipc.rs  keymap.rs  lib.rs  persistence.rs  prompt.rs  protocol.rs  pty.rs  worktree.rs
crates/clhorde-daemon/: Cargo.toml
crates/clhorde-daemon/examples/: test_client.rs
crates/clhorde-daemon/src/: ipc_server.rs  main.rs  orchestrator.rs  pty_worker.rs  session.rs  worker.rs
crates/clhorde-tui/: Cargo.toml
crates/clhorde-tui/src/: app.rs  cli.rs  ipc_client.rs  key_encoding.rs  keymap.rs  main.rs  orchestrator.rs  pty_renderer.rs  pty_worker.rs  ui.rs  worker.rs
docs/: cheatsheet.html  cli.html  configuration.html  features.html  guide.html  index.html  keybindings.html
docs/css/: print.css  style.css
docs/js/: main.js
docs/plan/: 05-prompt-preview.md  06-status-bar-rework.md  07-help-overlay.md  08-queue-reorder-feedback.md  09-batch-operations.md  10-prompt-tags.md  14-monorepo-split.md
plan/: 13-multiline-editor.md  14-monorepo-split-review.md  14-monorepo-split.md  15-daemon-logging.md
src/: app.rs  cli.rs  editor.rs  keymap.rs  main.rs  persistence.rs  prompt.rs  pty_worker.rs  ui.rs  worker.rs  worktree.rs
