[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
clhorde-core = { path = "crates/clhorde-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = { version = "0.28", default-features = false }
alacritty_terminal = "0.25"
portable-pty = "0.9"
tempfile = "3"
