[package]
name = "clhorde-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clhorde-cli"
path = "src/main.rs"

[dependencies]
clhorde-core.workspace = true
crossterm = { workspace = true, default-features = false }
toml.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
